--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -23,6 +23,8 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "dynamoose": "^4.0.4",
+    "nestjs-dynamoose": "^0.6.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
