--- a/src/backend/Dockerfile
+++ b/src/backend/Dockerfile
@@ -1,11 +1,10 @@
 # Production-grade Dockerfile for NestJS Lambda
 # Multi-stage build optimized for Lambda container runtime
-# Supports both x86_64 and ARM64 architectures
 
 ################################################################################
 # Stage 1: Base image with pnpm
 ################################################################################
-FROM --platform=$BUILDPLATFORM node:20-alpine AS base
+FROM node:20-alpine AS base
 RUN corepack enable && corepack prepare pnpm@10 --activate
 WORKDIR /app
 
@@ -14,7 +13,7 @@ WORKDIR /app
 ################################################################################
 FROM base AS deps
 COPY package.json pnpm-lock.yaml ./
-RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile
+RUN pnpm install --frozen-lockfile
 
 ################################################################################
 # Stage 3: Build application
@@ -30,12 +29,12 @@ RUN pnpm build
 ################################################################################
 FROM base AS prod-deps
 COPY package.json pnpm-lock.yaml ./
-RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile --prod
+RUN pnpm install --frozen-lockfile --prod
 
 ################################################################################
 # Stage 5: Lambda runtime - ARM64 optimized
 ################################################################################
-FROM public.ecr.aws/lambda/nodejs:20-arm64 AS runtime
+FROM public.ecr.aws/lambda/nodejs:20-arm64
 
 # Lambda task root
 ENV NODE_ENV=production
@@ -45,9 +44,6 @@ COPY --from=prod-deps /app/node_modules ${LAMBDA_TASK_ROOT}/node_modules
 
 # Copy built application
 COPY --from=builder /app/dist ${LAMBDA_TASK_ROOT}/dist
-
-# Copy lambda handler file
-COPY --from=builder /app/src/lambda.ts ${LAMBDA_TASK_ROOT}/src/
 
 # Set the CMD to the handler
 CMD ["dist/lambda.handler"]
