adjust frontend to use pnpm, fix backend dockerfile

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -172,7 +172,7 @@ jobs:
           pnpm build
 
           echo "Building OpenNext package for AWS Lambda..."
-          npx --yes @opennextjs/aws build
+          pnpm dlx @opennextjs/aws build
 
           echo "OpenNext build complete"
           ls -la .open-next/
