--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -183,7 +183,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: opennext-build
-          path: frontend/.open-next/**
+          path: frontend/.open-next/
           if-no-files-found: error
           retention-days: 1
 
