--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "next": "15.5.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "styled-jsx": "^5.1.6",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
