add open-next config to include sharp, remove previous solution attempts

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -135,10 +135,7 @@ jobs:
 
       - name: Install dependencies
         working-directory: ./backend
-        run: |
-          pnpm install --frozen-lockfile
-          # Install sharp with Linux x64 platform binaries for Lambda
-          pnpm add sharp --config.os=linux --config.cpu=x64 --config.libc=glibc
+        run: pnpm install --frozen-lockfile
 
       - name: Build Payload with OpenNext
         working-directory: ./backend
