--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "@payloadcms/next": "3.68.1",
     "@payloadcms/plugin-form-builder": "^3.68.2",
     "@payloadcms/richtext-lexical": "3.68.1",
+    "@payloadcms/storage-s3": "^3.68.4",
     "@payloadcms/ui": "3.68.1",
     "cross-env": "^7.0.3",
     "dotenv": "16.4.7",
