--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.556.0",
-    "next": "^16",
+    "next": "^16.1.1",
     "next-sitemap": "^4.2.3",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "qs-esm": "^7.0.2",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
@@ -26,7 +27,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "^16",
+    "eslint-config-next": "^16.1.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
