--- a/.github/workflows/deploy-backend-only.yml
+++ b/.github/workflows/deploy-backend-only.yml
@@ -46,12 +46,15 @@ jobs:
           pnpm dlx @opennextjs/aws build
           echo "OpenNext build complete"
           ls -la .open-next/
+          test -d .open-next || { echo "::error::.open-next directory missing after build"; exit 1; }
+          tar -czf opennext-backend.tar.gz .open-next
+          ls -la opennext-backend.tar.gz
 
       - name: Upload OpenNext backend build artifact
         uses: actions/upload-artifact@v4
         with:
           name: opennext-backend-build
-          path: backend/.open-next
+          path: backend/opennext-backend.tar.gz
           if-no-files-found: error
           retention-days: 1
 
@@ -73,7 +76,14 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: opennext-backend-build
-          path: backend/.open-next
+          path: backend
+
+      - name: Extract OpenNext backend build artifact
+        working-directory: ./backend
+        run: |
+          set -euo pipefail
+          rm -rf .open-next
+          tar -xzf opennext-backend.tar.gz
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
