--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,20 @@
   },
   "dependencies": {
     "@aws-sdk/client-cloudfront": "^3.750.0",
+    "@payloadcms/live-preview-react": "^3.70.0",
+    "@payloadcms/richtext-lexical": "^3.70.0",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-slot": "^1.2.4",
+    "@tailwindcss/typography": "^0.5.19",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.25.0",
     "lucide-react": "^0.556.0",
     "next": "^16.1.1",
     "next-sitemap": "^4.2.3",
+    "next-themes": "^0.4.6",
     "qs-esm": "^7.0.2",
     "react": "19.2.3",
     "react-dom": "19.2.3",
