--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,8 @@
     "@tailwindcss/typography": "^0.5.19",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.25.0",
     "lucide-react": "^0.556.0",
+    "motion": "^12.25.0",
     "next": "^16.1.1",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
