--- a/backend/package.json
+++ b/backend/package.json
@@ -8,11 +8,9 @@
     "build": "cross-env NODE_OPTIONS=\"--no-deprecation --max-old-space-size=8000\" next build",
     "dev": "cross-env NODE_OPTIONS=--no-deprecation next dev",
     "devsafe": "rm -rf .next && cross-env NODE_OPTIONS=--no-deprecation next dev",
-    "fix:ai-stack-payloadcms": "node scripts/fix-ai-stack-payloadcms.mjs",
     "generate:importmap": "cross-env NODE_OPTIONS=--no-deprecation payload generate:importmap",
     "generate:types": "cross-env NODE_OPTIONS=--no-deprecation payload generate:types && npx tsx scripts/export-types.ts",
     "lint": "cross-env NODE_OPTIONS=--no-deprecation next lint",
-    "postinstall": "node scripts/fix-ai-stack-payloadcms.mjs",
     "payload": "cross-env NODE_OPTIONS=--no-deprecation payload",
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start",
     "test": "pnpm run test:int && pnpm run test:e2e",
@@ -20,7 +18,7 @@
     "test:int": "cross-env NODE_OPTIONS=--no-deprecation vitest run --config ./vitest.config.mts"
   },
   "dependencies": {
-    "@ai-stack/payloadcms": "3.2.23-beta",
+    "@ai-stack/payloadcms": "^3.2.25",
     "@payloadcms/db-postgres": "3.70.0",
     "@payloadcms/next": "3.70.0",
     "@payloadcms/plugin-form-builder": "^3.70.0",
