--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,17 @@
-DATABASE_URI=mongodb://127.0.0.1/your-database-name
-PAYLOAD_SECRET=YOUR_SECRET_HERE
+DATABASE_URI=postgresql://payload:payload@127.0.0.1:5432/portfolio
+PAYLOAD_SECRET=replace-with-long-random-secret
+PAYLOAD_PUBLIC_SERVER_URL=http://localhost:3000
+PUBLIC_URL=http://localhost:3000
+
+# Cloudflare Turnstile
+CLOUDFLARE_TURNSTILE_SECRET_KEY=
+
+# Resend Email
+RESEND_API_KEY=
+EMAIL_FROM_ADDRESS=noreply@email.example.com
+EMAIL_FROM_NAME=Peter T Conti Consulting
+CONTACT_INBOX_EMAIL=hello@example.com
+CONSULTATION_URL=https://example.com/contact
+EMAIL_BRAND_LOGO_URL=
+EMAIL_RESPONSE_SLA=1 business day
+EMAIL_DELIVERY_MODE=capture
