--- a/infra/terraform.tfvars.example
+++ b/infra/terraform.tfvars.example
@@ -22,3 +22,38 @@ hosted_zone_id = "Z1234567890ABC"
 
 # Optional: CIDR blocks for direct database access (bastion/VPN)
 # bastion_cidr_blocks = ["10.0.0.0/8"]
+
+# Optional: Cloudflare Turnstile
+# turnstile_site_key = "0x4AAAAA..."
+# turnstile_secret_key = "0x4AAAAA..."
+
+# Optional: Resend Email (Payload CMS transactional email)
+# resend_api_key = "re_..."
+# email_from_address = "noreply@email.example.com"
+# email_from_name = "Peter T Conti Consulting"
+# contact_inbox_email = "hello@example.com"
+# consultation_url = "https://calendly.com/your-handle/discovery"
+# email_brand_logo_url = "https://example.com/logo.png"
+# email_response_sla = "1 business day"
+# email_delivery_mode = "jobs" # direct | jobs | capture
+# resend_domain_name = "email.example.com"
+#
+# Copy the DNS records from Resend > Domains > email.example.com into this list.
+# name should be the full DNS name relative to the hosted zone.
+# resend_dns_records = [
+#   {
+#     name    = "email.example.com"
+#     type    = "MX"
+#     records = ["10 feedback-smtp.us-east-1.amazonses.com"]
+#   },
+#   {
+#     name    = "email.example.com"
+#     type    = "TXT"
+#     records = ["v=spf1 include:amazonses.com ~all"]
+#   },
+#   {
+#     name    = "resend._domainkey.email.example.com"
+#     type    = "TXT"
+#     records = ["<value from Resend>"]
+#   },
+# ]
